<resources>
    <string name="app_name">MultiWeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="weather_data_temperature_celsius">20°</string>
    <string name="weather_data_location">Es liegen noch keine Daten vor</string>
    <string name="weather_data_description">Sonnig</string>
    <string name="provider_url_openweathermap">https://www.openweathermap.com</string>
    <string name="description_quelle_openweathermap">quelle: https://openweathermap.org/img/w/01d.png</string>
    <string-array name="provider_names">
        <item>OpenWeatherMap</item>
        <item>WeatherStack</item>
        <item>Spring</item>
    </string-array>
    <string-array name="class_names">
        <item>OpenWeatherMapAPI</item>
        <item>WeatherStackAPI</item>
        <item>SpringWeatherAPI</item>
    </string-array>
    <string name="location_name">location_name</string>
    <string name="weather_provider">weather_provider</string>
    <string name="server_adress">server_adress</string>
    <string name="use_gps">use_gps</string>
</resources>