<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            android:title="Allgemeine Einstellungen"
            app:iconSpaceReserved="false">
        <CheckBoxPreference
                android:title="Automatische Standortbestimmung"
                android:key="@string/use_gps"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />
        <EditTextPreference
                android:title="Manuelle Standorteingabe"
                android:key="@string/location_name"
                app:iconSpaceReserved="false" />
        <ListPreference
                android:title="Wetterdienst"
                android:key="@string/weather_provider"
                android:defaultValue="OpenWeatherMapAPI"
                android:entries="@array/provider_names"
                android:entryValues="@array/class_names"
                app:iconSpaceReserved="false" />
        <EditTextPreference
                android:title="Server-Adresse/IP"
                android:key="@string/server_adress"
                app:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>